# github-experiment

./: README.md
.github/: version_map.json
.github/workflows/: test.yml
mk-math/: pyproject.toml
mk-math/src/mk_math/: __init__.py
scripts/: get_version.py  version_output_actions.py
tests/: test_unit.py
