[project]
name = "mk-math"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "mert-kurttutan", email = "kurttutan.mert@gmail.com" }
]
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = [
  # Lint/format
  "pre-commit",
  "ruff",
  # Test
  "pytest",
]

[project.scripts]
mk-math = "mk_math:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
